
5th January: wxWindows 2.2.4 released

Small Postscript bouding box fix.

Patch for better 8-bit-display support.

Corrected log error message box.

Implememted wxCommandEvent::IsSelection() for wxListBox.

Corrected wxListBox::Set() for sorted mode.

Added EVT_TEXT_UPDATED for spin ctrl.

Corrected wrongly rounded value in slider and scrollbar
for negative values.

Small fix for wxTextFile type guessing.

Translation updates.

Various other fixes.

Synchronized release with wxMSW again.

3rd November: wxWindows 2.2.3 released

Fixed bugs in HTTP code.

Implemented wxNO_FULL_REPAINT_ON_RESIZE whenever possible
and reduced flicker a little (no longer diables GTK's own
anti-flicker code).

Always have a clipping region equivalent to the update
region in OnPaint events (such as under wxMSW and wxMac).

Implemented wxListBox::SetFirstItem().

Fixed some minor problems in HTML code, wxListCtrl,
wxListBox.

Fixed compilation on RedHat 7.0.

Updated many translations, added Swedish.

Changed default screenpixels-per-inch from 100 to 75 in
printing code.

Updated AFM font metrics for Ghostscript fonts and let
Linux and FreeBSD default to using GS fonts (and not
Adobe fonts).

20th September: wxWindows 2.2.2 released

Fixed wxSizer bug that made items with option
flags greater than 1 report a wrong size.

Fixed many incompatibilties with GTK themes -
essentially a backport from the 2.3 branch.

Added missing wxImage::Paste() for transparent
images.

Fixed a drawing error for ellipses and arc in both
the DC code and the PostScript code.

Fixed wxListCtrl::HitTest() for report mode.

Other minor fixes.

20th August 2000: wxWindows 2.2.1 released

Minor build fixes.

Use the wxCommmandEvent::IsChecked() function for checkable
menu items. This mean that the m_int parameter no longer
contains the ID of the menu!

Fixed major problems in ODBC logging code. This change is
binary backward incompatible.

Fixed reentry problems in DnD code.
